--- a/src/components/Navigation/NavigationItems/NavigationItems.module.css
+++ b/src/components/Navigation/NavigationItems/NavigationItems.module.css
@@ -3,4 +3,11 @@
     padding: 0;
     list-style: none;
     display: flex;
+    flex-flow: column;
+}
+
+@media(min-width:500px) {
+    .NavigationItems {
+        flex-flow: row;
+    }
 }
